comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates cumque amet maxime alias, expedita quod sint est quaerat. Nihil aut non tempore voluptatem earum dolor nam totam itaque id odio!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione laborum non facere? Eligendi ea molestias quos similique optio saepe adipisci, sequi libero placeat explicabo at repellendus id, quis quam obcaecati.</p>
         </article>
     </main>
     
