--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <head>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates cumque amet maxime alias, expedita quod sint est quaerat. Nihil aut non tempore voluptatem earum dolor nam totam itaque id odio!</p>
+            <p><a href="">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione laborum non facere? Eligendi ea molestias quos similique optio saepe adipisci, sequi libero placeat explicabo at repellendus id, quis quam obcaecati.</p>
+            <p><a href="">Acesse o curso de JavaScript</a></p>
         </article>
     </main>
     
